Add order fragment

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">SimpleTabLayout</string>
+    <string name="order_fragment">Order Fragment</string>
 </resources>
