--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">SimpleTabLayout</string>
     <string name="order_fragment">Order Fragment</string>
     <string name="pending_fragment">Pending Fragment</string>
+    <string name="delivered_fragment">Delivered Fragment</string>
 </resources>
